--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Some demos about UpRing",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build-chat": "browserify -t sheetify/transform -d chat/client.js > chat/bundle.js"
   },
   "repository": {
     "type": "git",
@@ -18,8 +19,17 @@
   "homepage": "https://github.com/mcollina/upring-demos#readme",
   "dependencies": {
     "baseswim": "^1.0.0",
+    "hapi": "^16.1.0",
+    "hapi-pino": "^1.3.0",
+    "inert": "^4.1.0",
+    "multines": "^0.1.2",
+    "nes": "^6.4.0",
     "pino": "^4.0.3",
+    "sheetify": "^6.0.1",
+    "tachyons": "^4.6.2",
     "upring-control": "^0.1.4",
-    "upring-kv": "^0.4.4"
+    "upring-kv": "^0.4.4",
+    "upring-pubsub": "^0.2.1",
+    "yo-yo": "^1.4.0"
   }
 }
