--- a/nginx.conf
+++ b/nginx.conf
@@ -13,6 +13,9 @@ http {
 
     location / {
       proxy_pass http://myapp1;
+      proxy_http_version 1.1;
+      proxy_set_header Upgrade $http_upgrade;
+      proxy_set_header Connection "upgrade";
     }
   }
 }
